# PulseController

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
crates/pulsepad-discovery/: Cargo.toml
crates/pulsepad-discovery/src/: error.rs  lib.rs  manager.rs  mdns.rs
crates/pulsepad-input/: Cargo.toml
crates/pulsepad-input/src/: controller.rs  engine.rs  error.rs  keyboard.rs  lib.rs  media.rs  mouse.rs
crates/pulsepad-platform/: Cargo.toml
crates/pulsepad-platform/src/: error.rs  lib.rs  linux.rs  macos.rs  traits.rs  windows.rs
crates/pulsepad-profiles/: Cargo.toml
crates/pulsepad-profiles/src/: error.rs  lib.rs  manager.rs  schema.rs
crates/pulsepad-protocol/: Cargo.toml
crates/pulsepad-protocol/src/: error.rs  lib.rs  packet.rs  version.rs  wire.rs
crates/pulsepad-security/: Cargo.toml
crates/pulsepad-security/src/: error.rs  lib.rs  pairing.rs
crates/pulsepad-storage/: Cargo.toml
crates/pulsepad-storage/src/: config.rs  error.rs  lib.rs
crates/pulsepad-telemetry/: Cargo.toml
crates/pulsepad-telemetry/src/: collector.rs  error.rs  lib.rs
crates/pulsepad-transport/: Cargo.toml
crates/pulsepad-transport/src/: bluetooth.rs  error.rs  lib.rs  manager.rs  quic.rs  traits.rs  udp.rs  usb.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/components/: Dashboard.tsx  Devices.tsx  Logs.tsx  Profiles.tsx  Settings.tsx  Sidebar.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/app/: manager.rs  mod.rs
src-tauri/src/commands/: connection.rs  discovery.rs  logs.rs  mod.rs  profiles.rs  settings.rs  telemetry.rs
src-tauri/src/network/: connection.rs
src-tauri/src/profiles/: manager.rs
src-tauri/src/ui/: state.rs
