[package]
name = "pulsepad"
version = "0.1.0"
edition = "2021"
description = "PulsePad - Transform your iPhone into a professional wireless controller"
authors = ["PulsePad Team"]

[dependencies]
pulsepad-protocol = { path = "../crates/pulsepad-protocol" }
pulsepad-transport = { path = "../crates/pulsepad-transport" }
pulsepad-input = { path = "../crates/pulsepad-input" }
pulsepad-platform = { path = "../crates/pulsepad-platform" }
pulsepad-profiles = { path = "../crates/pulsepad-profiles" }
pulsepad-storage = { path = "../crates/pulsepad-storage" }
pulsepad-security = { path = "../crates/pulsepad-security" }
pulsepad-telemetry = { path = "../crates/pulsepad-telemetry" }
pulsepad-discovery = { path = "../crates/pulsepad-discovery" }

tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
