[package]
name = "pulsepad-discovery"
description = "Device discovery via UDP broadcast, mDNS, and Bluetooth scan"
version.workspace = true
edition.workspace = true

[dependencies]
pulsepad-protocol = { path = "../pulsepad-protocol" }
pulsepad-transport = { path = "../pulsepad-transport" }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
serde_json = { workspace = true }
