[package]
name = "pulsepad-storage"
description = "Persistent storage and configuration management"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
dirs = "6"
