[package]
name = "pulsepad-telemetry"
description = "Performance metrics, packet statistics, and system monitoring"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
