[package]
name = "pulsepad-transport"
description = "Transport abstraction for device communication"
version.workspace = true
edition.workspace = true

[dependencies]
pulsepad-protocol = { path = "../pulsepad-protocol" }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"
bitflags = "2"

# BLE
btleplug = { version = "0.11", features = ["serde"] }

# USB
nusb = "0.1"

# QUIC
quinn = "0.11"
rustls = "0.23"
rcgen = "0.13"
webpki-roots = "0.26"

[target.'cfg(target_os = "windows")'.dependencies]
[target.'cfg(target_os = "macos")'.dependencies]
btleplug = { version = "0.11", features = ["serde"] }
